# auth

./: .dprint.jsonc  .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  RELEASING.md  mise.toml
.cargo/: audit.toml
.claude/agents/: wiki-ingest.md  wiki-lint.md
.github/workflows/: ci.yml  release-image.yml  release-sdk.yml  release-server.yml
.sqlx/: query-0077d8e0ef03f9b72c98301476f409e98d3e0c543fc6e7c9a5af17383f43d00c.json  query-017d51d764fcd308db750ad958d4b790ec4737beae002dbd9e6df62ed422ae5e.json  query-069ef3b15d36b2d431e0c5ec8909c1b2669a18b752051dc432a1a4b0a6dc89bb.json  query-08779c6f763de70c37e56f4d8a1a17af0e6144732cada78b5d3f592501839ed5.json  query-0cf64e7b709ad302b1a4a6d0a24e7d139d3e0c5fee0fadfb34b7ef2b015d5f1d.json  query-0d1daa4d35cd0f6a9fb7050067109dac285d9b172f5c21acfd95e3a1eb7dac82.json  query-0d476c23b39fb375eefb42ae646f6fde5d9b52630c3ce6292adc467d7f8f7145.json  query-0e4e714d3b2905e3206ebfb9682a48deca549bfbf68ae4b5e13138435e7d47f2.json  query-0fcb903e490545c2e13413a0184d03b51b9c9de720c4e24f9e2080d8bbdb2910.json  query-10f5b4c21ec1d3e98e7a65ea95644e3d27961405ff759e0e545ac5c9fd65da74.json  query-13805be0646e0c76badf8f9dad191e6dc75c5f0cb84546ad8d2f244616fd1a1c.json  query-15eb734b1a607b7b3510837667405a9ba855acfe4b699e485a4b5ecbf379f267.json  query-160f6e31b1dc457c4027e0b5fb3de9c6f73d7c99228f35f310e45a534de28af5.json  query-1bfdc778e471b458aa3b35d9981386971f3a734e1fb5c65baf91913e0257b600.json  query-1c260c68aeeb055a4ac1a056d445f71f3f5f3b9bea6b497b93abfa5938ccea22.json  query-1c8bf6691e8810071e7c541fd0fd466abeae4ef58f838d939017df9c2f029885.json  query-1cbb1452fca390961ac1eee5c5ed799c7d5d29dac9f49e085581cd2505bb5dd9.json  query-200e26abebc42365d0be6ac5af4846fae89cb8f062ed51c3f9d317a2a238fb5a.json  query-2043ab03a823195c919811145be4319c7b0bc64ef84fa2545d40e6f87c47c4ba.json  query-20c87bcc24d3a6d26651b4390ca64ccb0aa850944933470a226f1f65e8ed8494.json  query-20c91f5e52500cc9a71fa708071073c2051e7d8997deecea5258f6647d6aefd4.json  query-23cd2fff53e8ef3a4556d3bfd02dc74f90d6e06b4c6d320339ddfed880676323.json  query-277b0dd7f7e57ec079c568da4ee296f215a9404fd4821981a7094235b06d333e.json  query-2ca90944fa632dc5ce419201cd87b19e0b60d783f4eaba8ea31ae189fd6e1bd8.json  query-2dee9b90389a6488ac50f3983a95715ba2193a75b2828d5e37c9272c4e3390ff.json  query-2e086ceabe0289e5eff1a79026d5b301f70c8b16f6e3f180ca2e87f43ce475f9.json  query-2f00b5d148b812d6722f121022d13291e78ed7cbf7717a88d23d3e3624407d5d.json  query-2f3cc3a0164b478817b07f2d95004f5b5c67747d32ea6d2cb5725c63d098e9d9.json  query-34d7019ec52290229a66f406017ecdaa4a75ce4afba88b59b4078d2e9a5add0c.json  query-36e5ded4da27d1b2efb6a214f99229394eb0db26ae5b3a7739f9a1c0bf65ee6e.json  query-3a2e90d0a81c47f52a509874a3ca03ed7d2a921c55a8f73da7dc26003dad08a5.json  query-3bd91b091b6c35eef42dc4d431b56b615dab30e0af0392a49c2c0a9024e8f41e.json  query-3bf6e258ce4c98e7c1f2e966b5cd817b0c8402219f363959bd4d341431abe632.json  query-3e5f4fd672f1117e0dce2c513f74f396e9a5e585bfc975146a51a6b8799b3a70.json  query-3fcdd0a3d228f19f285d381e082d4ee08cc74c006746392403e1202ab1e7fc69.json  query-42e5e273b340f40502c59ea4dcba912f7d3a0cdbd047b0f7dcc2c083e9f82946.json  query-46dc2a711357bfd731def8fb26d1430341fffab38e56524b3f739f79181daf5e.json  query-47474bd6a513aa1cde95a38593aaaf388f3f75f0a3cfd1b0edfe0961aafa6f23.json  query-47b793866af545fd0e4fb79838d6cd2fe72aa495a71108aaf9b7d0267eda48b7.json  query-4951100126ae5846e3d59d7bf28e06ebdd3504cbac9c4f4123ecb0381f1f46b7.json  (+102 more)
.wiki/: .gitignore  SCHEMA.md
.wiki/architecture/: overview.md
.wiki/concepts/: authorization.md  cookie-helpers.md  jwt-verification.md  one-time-token-consumption.md  performance-testing.md  refresh-token-replay-detection.md
.wiki/entities/: authz-relation.md  authz-schema.md  identity.md  oauth.md  organization.md  session.md  signing-key.md  test-server.md  token.md  ts-sdk-client.md  user.md  webauthn-credential.md
.wiki/log.d/: .gitkeep  2026-04-30T18-58-08Z-924e8973.md  2026-04-30T18-58-11Z-e196e203.md  2026-04-30T18-58-13Z-c7b83d44.md  2026-04-30T18-58-14Z-bee86a2a.md  2026-04-30T18-58-16Z-095edd47.md  2026-04-30T18-58-18Z-f95aa612.md  2026-04-30T18-58-19Z-397cb60b.md  2026-04-30T18-58-21Z-3e47da8d.md
.wiki/sources/: 2026-04-30-api-integration-tests.md  2026-04-30-auth-architecture.md  2026-04-30-auth-service-overview.md  2026-04-30-authz-extension-architecture.md  2026-04-30-authz-extension-overview.md  2026-04-30-benchmarking.md  (+3 more)
authz_extension/: Cargo.toml  README.md  authz_extension.control
bench/: Cargo.toml  README.md
bench/scripts/: ablation_report.py  run_ablations.sh
bench/src/: main.rs
bench/src/harness/: metrics.rs  mod.rs  report.rs  runner.rs  scenario.rs  zipf.rs
bench/src/scenarios/: mod.rs
bench/src/scenarios/authz/: batch_check.rs  bulk_write.rs  corpus.rs  depth_sweep.rs  depth_sweep_cold.rs  direct_check.rs  early_exit.rs  early_exit_v2.rs  hierarchy_check.rs  invalidation_storm.rs  mod.rs  multi_decision_serial.rs  native_batch_check.rs  read_write_mix.rs  scale_sweep.rs  single_check.rs
bench/src/scenarios/baseline/: indexed_lookup.rs  mod.rs  ping.rs
bench/src/scenarios/http/: cold_check.rs  mod.rs  warm_check.rs
beyond-auth-extension/: ARCHITECTURE.md  Cargo.toml  Dockerfile.cross  README.md  beyond_auth.control  beyond_auth_extension.control
beyond-auth-extension/src/: lib.rs
docs/: deploy-handoff.md
migrations/: 0001_app_config.sql  0002_authn.sql  0003_extended_authn.sql  0004_authz.sql  0005_org_teams.sql  0006_api_keys.sql  0006_authz_extension.sql  0006_session_idle_timeout.sql  0007_refresh_tokens.sql
openapi/: v1.json
scripts/: install-extension.sh  install-server.sh
src/: app_config.rs  cli.rs  config.rs  crypto.rs  db.rs  email.rs  emails.rs  error.rs  handoff_bridge.rs  http.rs  identities.rs  invitations.rs  jwt.rs  keys.rs  lib.rs  main.rs  metrics.rs  mmds.rs  one_time_token.rs  orgs.rs  pages.rs  passwords.rs  refresh_tokens.rs  sessions.rs  signing_keys.rs  telemetry.rs  tenants.rs  test_server.rs  token_gc.rs  tokens.rs  users.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+253 files in other folders)
