[workspace]
members = ["bench", "xtask"]

[package]
name = "beyond-auth"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
description = "Beyond authentication and authorization service"

[[bin]]
name = "beyond-auth"
path = "src/main.rs"

[lib]
name = "beyond_auth"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = { version = "0.5", features = ["password-hash", "std"] }
axum = "0.8"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
ed25519-dalek = { version = "2.2", features = ["pkcs8", "pem", "rand_core"] }
hex = "0.4"
mimalloc = { version = "0.1", features = ["v3"] }
opentelemetry = { version = "0.31", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
pkcs8 = "0.10"
prometheus = "0.14"
qrcode = "0.14"
quick_cache = "0.6"
rand_core = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json", "migrate"] }
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "catch-panic", "timeout"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
unicode-normalization = "0.1"
urlencoding = "2"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
uuid = { version = "1", features = ["v7", "serde"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
