[workspace]
members = ["bench", "beyond-auth-extension", "xtask"]

[package]
name = "beyond-auth"
version = "0.1.0"
# The package has two bins (beyond-auth + handoff-test-supervisor); set
# this so `cargo run` without `--bin` picks the production binary.
default-run = "beyond-auth"
edition = "2024"
license = "AGPL-3.0"
description = "Beyond authentication and authorization service"

[[bin]]
name = "beyond-auth"
path = "src/main.rs"

# Minimal supervisor binary used by the handoff integration tests to
# exercise the separate-process supervisor deployment shape. Uses the
# `handoff::Supervisor` library API (same code path as production
# supervisors), so it's a proper end-to-end test of that surface.
# Gated on `test-server` so production builds don't ship it.
[[bin]]
name = "handoff-test-supervisor"
path = "tests/handoff/bin/test_supervisor.rs"
required-features = ["test-server"]

[lib]
name = "beyond_auth"
path = "src/lib.rs"

[features]
test-server = ["dep:libc"]
# Build the (transitive, via webauthn-rs) OpenSSL from source instead of linking
# system libssl. Required for cross/static builds where the multiarch OpenSSL
# headers aren't on zig's include path (e.g. cargo-zigbuild to glibc 2.39 in the
# homelab smoke). No-op for normal noble builds, which use system libssl.
vendored-openssl = ["dep:openssl"]

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = { version = "0.5", features = ["password-hash", "std"] }
axum = "0.8"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
ed25519-dalek = { version = "2.2", features = ["pkcs8", "pem", "rand_core"] }
handoff = { version = "0.1", package = "beyond-handoff" }
hex = "0.4"
hyper = "1"
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
# Used only by the `test-server`-gated test supervisor binary and the
# handoff test harness for fd-shuffling under `pre_exec`. Optional so
# production builds (no `test-server`) don't pull it in.
libc = { version = "0.2", optional = true }
# Direct (optional) handle on the openssl crate webauthn-rs already pulls, so the
# `vendored-openssl` feature can flip openssl-sys to its vendored build.
openssl = { version = "0.10", features = ["vendored"], optional = true }
opentelemetry = { version = "0.31", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
pkcs8 = "0.10"
prometheus = "0.14"
qrcode = "0.14"
quick_cache = "0.6"
rand_core = "0.6"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form", "http2"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json", "migrate"] }
subtle = "2"
thiserror = "2"
tikv-jemallocator = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "catch-panic", "timeout"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
unicode-normalization = "0.1"
urlencoding = "2"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
uuid = { version = "1", features = ["v7", "serde"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
rcgen = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
tempfile = "3"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
wiremock = "0.6"

[[test]]
name = "api"
path = "tests/api/main.rs"
required-features = ["test-server"]

[[test]]
name = "handoff"
path = "tests/handoff/main.rs"
required-features = ["test-server"]
