[package]
name = "bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
beyond_auth = { package = "beyond-auth", path = "..", default-features = false }
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7"
rand = { version = "0.8", features = ["std", "std_rng", "small_rng"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate", "uuid", "chrono"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
