[package]
name = "bench"
version = "0.1.0"
edition = "2024"
publish = false

[features]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
anyhow = "1"
argon2 = { version = "0.5", features = ["password-hash", "std"] }
async-trait = "0.1"
base64 = "0.22"
beyond_auth = { package = "beyond-auth", path = "..", default-features = false, features = ["test-server"] }
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
hdrhistogram = "7"
mimalloc = { version = "0.1", features = ["v3"] }
rand = { version = "0.8", features = ["std", "std_rng", "small_rng"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate", "uuid", "chrono"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tikv-jemallocator = { version = "0.6", optional = true }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "v7"] }
