[package]
name = "beyond-auth-extension"
version = "0.1.0"
edition = "2024"
publish = false

# lib.name fixes the installed extension identity to the canonical `beyond_auth`
# (control file `beyond_auth.control`, `beyond_auth.so`, `beyond_auth--<ver>.sql`)
# that the beyond-pg supervisor expects (REQUIRED_EXTENSIONS / shared_preload).
# The cargo package stays `beyond-auth-extension` (CI `-p`, asset prefix).
[lib]
name = "beyond_auth"
crate-type = ["cdylib"]

[features]
default = ["pg18"]
pg17 = ["pgrx/pg17"]
pg18 = ["pgrx/pg18"]

[dependencies]
pgrx = { version = "=0.18.0", default-features = false }
