[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate"] }
tokio = { version = "1", features = ["full"] }
